2010-11-03  Anders Carlsson  <andersca@apple.com>

        Reviewed by Adam Roben.

        Implement NP_SetProperty
        https://bugs.webkit.org/show_bug.cgi?id=48956

        * Shared/Plugins/NPObjectMessageReceiver.cpp:
        (WebKit::NPObjectMessageReceiver::setProperty):
        Call the NPClass setProperty function.

        * Shared/Plugins/NPObjectMessageReceiver.messages.in:
        Add SetProperty message.

        * Shared/Plugins/NPObjectProxy.cpp:
        (WebKit::NPObjectProxy::setProperty):
        Send a SetProperty message.

        (WebKit::NPObjectProxy::NP_SetProperty):
        Call NPObjectProxy::setProperty.

2010-11-03  Anders Carlsson  <andersca@apple.com>

        Reviewed by Simon Fraser.

        Out of process plug-ins don't support the CA drawing model
        https://bugs.webkit.org/show_bug.cgi?id=48950
        <rdar://problem/8626019>

        * Platform/CoreIPC/HandleMessage.h:
        (CoreIPC::callMemberFunction):
        Add new overload.

        * PluginProcess/PluginControllerProxy.cpp:
        (WebKit::PluginControllerProxy::initialize):
        Call platformInitialize().

        (WebKit::PluginControllerProxy::destroy):
        Call platformDestroy().

        (WebKit::PluginControllerProxy::isAcceleratedCompositingEnabled):
        Assume that accelerated compositing is available if we have a render server port.

        (WebKit::PluginControllerProxy::geometryDidChange):
        Call platformGeometryDidChange().

        * PluginProcess/PluginProcess.h:
        * PluginProcess/WebProcessConnection.cpp:
        (WebKit::WebProcessConnection::createPlugin):
        Pass back the remote layer client ID.

        * PluginProcess/WebProcessConnection.messages.in:
        Add a remoteLayerClientID out parameter to CreatePlugin.

        * PluginProcess/mac/PluginControllerProxyMac.mm: Added.
        (WebKit::PluginControllerProxy::platformInitialize):