@@ -1,3 +1,12 @@
+2010-11-03  Alice Liu  <alice.liu@apple.com>
+
+        Fix clang++ build 
+
+        * PluginProcess/PluginProcess.h:
+        * UIProcess/Plugins/PluginProcessProxy.h:
+        * UIProcess/WebContextMenuProxy.h:
+        Change class to struct and vise versa where needed.
+
 2010-11-03  Anders Carlsson  <andersca@apple.com>
 
         Reviewed by Adam Roben.
